--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -154,7 +154,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
-                    android:id="@+id/edit_prefession"
+                    android:id="@+id/edit_profession"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
@@ -243,8 +243,9 @@
 
             </LinearLayout>
 
+
             <Button
-                android:id="@id/Editer"
+                android:id="@+id/Editer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
