--- a/app/src/main/res/layout/fragment_forum_fragment.xml
+++ b/app/src/main/res/layout/fragment_forum_fragment.xml
@@ -88,6 +88,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="10dp"
+                android:onClick="addingNewdiscussion"
                 android:layout_marginTop="646dp"
                 android:backgroundTint="@color/bacgroung_text_continuerr"
                 android:clickable="true"
