--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -229,5 +229,18 @@
         </RelativeLayout>
     </ScrollView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:backgroundTint="@color/bacgroung_text_continuerr"
+        android:clickable="true"
+        android:onClick="AddNewPost"
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
