--- a/app/src/main/res/layout/document_item.xml
+++ b/app/src/main/res/layout/document_item.xml
@@ -38,13 +38,14 @@
 
             <TextView
                 android:id="@+id/name_poster"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/card_img_poster"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="Courtney Henry"
+                android:maxLines="2"
                 android:textSize="12sp" />
 
                 <TextView
