--- a/app/src/main/res/layout/activity_detail_publication_doc.xml
+++ b/app/src/main/res/layout/activity_detail_publication_doc.xml
@@ -308,15 +308,16 @@
                     style="@style/button_text"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/btn_size"
-                    android:layout_marginTop="140dp"
                     android:background="@drawable/shape_btn_apercu"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="@string/text_apercu"
                     android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/pdfView_book" />
+                    app:layout_constraintTop_toTopOf="parent" />
+<!--                    app:layout_constraintTop_toTopOf="@+id/pdfView_book" />-->
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
