--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -185,7 +185,8 @@
                     android:layout_marginTop="@dimen/marginTop_cardView"
                     android:layout_marginRight="@dimen/marginLeft"
                     app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="@dimen/card_elevation_value">
+                    app:cardElevation="@dimen/card_elevation_value"
+                    android:background="@color/orange">
 
 
                     <TextView
