--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -192,39 +192,46 @@
                         android:layout_marginLeft="30dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginRight="30dp"
+                        app:cardCornerRadius="8dp"
                         app:cardElevation="8dp">
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
                             android:background="@drawable/shape_facebook_button">
 
-
                             <ImageView
-                                android:layout_gravity="center_vertical"
-                                android:id="@+id/imageView2"
+                                android:id="@+id/facebook_img"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="start|center"
+                                android:layout_weight="1"
                                 android:contentDescription="@string/facebook_image"
-                                android:layout_marginLeft="105dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/facebook"
+                                app:layout_constraintHorizontal_bias="0.96"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
                                 app:srcCompat="@drawable/ic_baseline_facebook" />
 
                             <TextView
                                 android:id="@+id/facebook"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-
-                                android:gravity="center"
-                                android:paddingBottom="10dp"
+                                android:layout_weight="1"
+                                android:fontFamily="@font/poppins_regular"
+                                android:gravity="start"
                                 android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
                                 android:text="@string/facebook"
                                 android:textColor="#0A75D8"
                                 android:textSize="15sp"
-                                android:textStyle="bold" />
-
-
-                        </LinearLayout>
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                     </androidx.cardview.widget.CardView>
 
@@ -237,43 +244,49 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginRight="30dp"
                         android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="6dp"
+                        app:cardCornerRadius="8dp"
                         app:cardElevation="8dp">
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"
                             android:background="@drawable/shape_google_button">
 
+                            <TextView
+                                android:id="@+id/google"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/poppins_regular"
+                                android:gravity="center"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:text="@string/google"
+                                android:textColor="#E5180B"
+                                android:textSize="15sp"
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <ImageView
                                 android:id="@+id/imageView3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="110dp"
                                 android:contentDescription="@string/google_img"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@+id/google"
+                                app:layout_constraintHorizontal_bias="0.97"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
                                 app:srcCompat="@drawable/ic_flat_google" />
 
-                            <TextView
-                                android:id="@+id/google"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-
-                                android:gravity="center"
-                                android:paddingBottom="10dp"
-                                android:paddingTop="10dp"
-                                android:text="@string/google"
-                                android:textColor="#E5180B"
-                                android:textSize="15sp"
-                                android:textStyle="bold" />
-
-
-                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                     </androidx.cardview.widget.CardView>
+
                 </LinearLayout>
 
                 <!--  ************   Se connecter *******************-->
