--- a/app/src/main/res/layout/classe_vituelle_blank.xml
+++ b/app/src/main/res/layout/classe_vituelle_blank.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:aandroid="http://schemas.android.com/tools">
 
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/img_brand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/ic_undraw_dreamer_gxxi_1" />
     <TextView
         android:id="@+id/text_not_available"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/poppins_regular"
-        app:layout_constraintTop_toBottomOf="@+id/img_brand"
+        android:layout_below="@+id/img_brand"
         android:text="Vous n'etes affilier à aucune classe virtuelle"/>
 
     <View
@@ -33,7 +38,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
         android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/text_not_available"/>
+        android:layout_below="@+id/text_not_available"/>
     <TextView
         android:id="@+id/text_info"
         android:layout_width="match_parent"
@@ -42,7 +47,7 @@
         android:fontFamily="@font/poppins_regular"
         android:gravity="center"
         android:textColor="@color/orange"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
+        android:layout_below="@+id/divider"
         android:text="C'est quoi la classe virtuelle"/>
     <TextView
         android:id="@+id/text_go_to_prenium"
@@ -54,7 +59,7 @@
         android:gravity="center"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/text_info"
+        android:layout_below="@+id/text_info"
         android:text="Pour jouir des avantages offertes par la classe virtuelle, passez prenium"/>
 
     <androidx.cardview.widget.CardView
@@ -65,7 +70,7 @@
         android:layout_marginEnd="50dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_go_to_prenium">
+        android:layout_below="@+id/text_go_to_prenium">
 
         <TextView
             android:layout_width="match_parent"
@@ -76,9 +81,11 @@
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/text_go_to_prenium"
+            aandroid:layout_below="@+id/text_go_to_prenium"
             android:text="Prenium"/>
 
     </androidx.cardview.widget.CardView>
+    </RelativeLayout>
+        </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
